Commit Inclusion of 1)Added user-friendly error messages on the console screen, 2)Implemented user restrictions, 3)Enhanced the Customers screen with field add/remove functionality, 4)Enabled history data review with export option in the console, 5)implemented FATCA XML  report generation, 6)Template dependency handling, and improved CORS error message handling